teste unitario CompareHeroServiceTest  e teste de integração HeroControllerTest